css/style.css
.light-text{
    color: lightgrey;
}
a:hover{
    color: #00aba9;
}
.coffee-text {
    font-size: 66px;
    font-family:"Apple Chancery";
    color: darkgrey;
    /*font-weight: bold;*/
    -webkit-text-stroke-width: 1px;
    -webkit-text-stroke-color: black;

}

.myButton {
    box-shadow:inset 0px 1px 0px 0px #22130F;
    background-color: darkslategrey;
    border-radius:3px;
    border:1px solid #2d231a;
    display:inline-block;
    cursor:pointer;
    color: #ffffff;
    font-weight: bolder;
    font-family:Yusei Magic;
    padding:6px 24px;
    text-decoration:none;
    text-shadow:0px 1px 0px #4d3534;
    transition: .1s ease-in-out;
}
.myButton:hover {
    background-color: rgb(222, 84, 20);
    transform: scale(1.03);
}
.myButton:active {
    position:relative;
    top:1px;
}

#coffeeList, #coffeeSearch {
    background-color: transparent;
!important;
}

.card {
    font-family:Potta;
    text-align: center;
    outline: black;
    color: rgb(222, 84, 20);
}
.card:hover{
    color: #00aba9;
}

.white-text {
    color: white;
!important;
}

.white-a, a {
    color: white;
!important;
}

.jumbotron {
    font-family:Potta;
    height: 30vh;
    background-color: transparent;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
}

/*https://www.pexels.com/video/ground-coffee-from-a-coffee-bean-grinder-machine-2849942/*/

.jumbotron:hover{
    filter: brightness(85%);
}
body {
    background-image: url("https://images.unsplash.com/photo-1565023998836-962ff9d5f9be?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80");
    background-size: cover;
    background-repeat: repeat;
    background-attachment: fixed;
    background-position: center;
}

nav {border: 1px solid teal;
    background-color: #16222A;
}

#jumbotron-tex-shadow {
    text-shadow: 2px 2px #FF0000;
    background-color: red;
    opacity: 0.5;
}

h1.display-3 {
    font-family: Architects Daughter;
    text-shadow: 6px 6px slategray;
    /*background-color: rgb(248, 140, 3);*/
    opacity: 0.3;
}
/*#navbar-brand {*/
/*    color: black;*/
/*}*/



/*FOOTER*/

footer {
    background: #16222A;
    background: -webkit-linear-gradient( #16222A, teal, black);
    background: linear-gradient( #16222A, teal, black);
    color: white;
    margin-top:100px;
}

footer a {
    color: #fff;
    font-size: 14px;
    transition-duration: 0.2s;
}

footer a:hover {
    color: #FA944B;
    text-decoration: none;
}

.copy {
    font-size: 12px;
    padding: 10px;
    border-top: 1px solid #FFFFFF;
}

.footer-middle {
    padding-top: 2em;
    color: white;
}


/*SOCİAL İCONS*/

/* footer social icons */

ul.social-network {
    list-style: none;
    display: inline;
    margin-left: 0 !important;
    padding: 0;
}

ul.social-network li {
    display: inline;
    margin: 0 5px;
}


/* footer social icons */

.social-network a.icoFacebook:hover {
    background-color: #3B5998;
}

.social-network a.icoLinkedin:hover {
    background-color: #007bb7;
}

.social-network a.icoFacebook:hover i,
.social-network a.icoLinkedin:hover i {
    color: #fff;
}

.social-network a.socialIcon:hover,
.socialHoverClass {
    color: #44BCDD;
}

.social-circle li a {
    display: inline-block;
    position: relative;
    margin: 0 auto 0 auto;
    -moz-border-radius: 50%;
    -webkit-border-radius: 50%;
    border-radius: 50%;
    text-align: center;
    width: 30px;
    height: 30px;
    font-size: 15px;
}

.social-circle li i {
    margin: 0;
    line-height: 30px;
    text-align: center;
}

.social-circle li a:hover i,
.triggeredHover {
    -moz-transform: rotate(360deg);
    -webkit-transform: rotate(360deg);
    -ms--transform: rotate(360deg);
    transform: rotate(360deg);
    -webkit-transition: all 0.2s;
    -moz-transition: all 0.2s;
    -o-transition: all 0.2s;
    -ms-transition: all 0.2s;
    transition: all 0.2s;
}

a:hover{
    -moz-transform: rotate(360deg);
    -webkit-transform: rotate(360deg);
    -ms--transform: rotate(360deg);
    transform: rotate(360deg);
    -webkit-transition: all 0.2s;
    -moz-transition: all 0.2s;
    -o-transition: all 0.2s;
    -ms-transition: all 0.2s;
    transition: all 0.2s;
}

.social-circle i {
    color: #595959;
    -webkit-transition: all 0.8s;
    -moz-transition: all 0.8s;
    -o-transition: all 0.8s;
    -ms-transition: all 0.8s;
    transition: all 0.8s;
}

.social-network a {
    background-color: #F9F9F9;
}
h4 {
    font-family: "Yusei Magic";
}

#navcol-1 {
    font-size: 18px
}
@media (max-width: 576px) {
    .navbar-dark .navbar-nav .nav-link {
        float: right
    }
}

